# damntest

./: CMakeLists.txt  build.sh
include/: damntest.h
src/: common.h  damntest.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  main.cpp
